# check-semantic-version

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build-docker-image.yml  python-ci.yml  release.yml  update-pull-request.yml
check_semantic_version/: check_semantic_version.py  cli.py  configuration.py  entrypoint.sh
examples/: workflow.yml
tests/: test_check_semantic_version.py  test_cli.py  test_configuration.py
tests/test_package/: setup.py
